fixed scroll padding on mobile

--- a/src/components/Board/Board.scss
+++ b/src/components/Board/Board.scss
@@ -37,3 +37,10 @@
     }
   }
 }
+
+@media #{$smartphone} {
+  .board {
+    grid-template-columns: repeat(var(--board__columns), minmax(calc((100vw - #{$board__side-panel-width} / 2) / min(var(--board__columns), var(--visible-columns))), 100vw));
+    scroll-padding: $board__side-panel-width / 4;
+  }
+}
